--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/gestaocpc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.postgresql-9.4.1209.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\postgresql-9.4.1209.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.postgresql-9.4.1209.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
